--- a/littlelemon/restaurant/static/css/style.css
+++ b/littlelemon/restaurant/static/css/style.css
@@ -253,3 +253,27 @@ footer p {
         width: 100%;
     }
   }
+
+.column > form > button{
+    background: none;
+    border: none;
+    padding: 0; 
+    font: inherit; 
+    cursor: pointer;
+    color: #EE9972;
+    text-decoration: underline;
+    font-size: large; 
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10%;
+    justify-content: space-evenly;
+}
+
+.grid img {
+    padding: auto;
+    width: 90%;
+    height: 90%;
+}
